Refactor clusters into separate controller class.

--- a/AweSimConnect/AweSimConnect.csproj
+++ b/AweSimConnect/AweSimConnect.csproj
@@ -50,6 +50,7 @@
     <Compile Include="AweSimMain.Designer.cs">
       <DependentUpon>AweSimMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\ClusterController.cs" />
     <Compile Include="Models\Cluster.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
