--- a/AweSimConnect/AweSimConnect.csproj
+++ b/AweSimConnect/AweSimConnect.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Controllers\PuTTYController.cs" />
     <Compile Include="Controllers\VncController.cs" />
     <Compile Include="Models\Cluster.cs" />
+    <Compile Include="Models\Connection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AweSimMain.resx">
