--- a/AweSimConnect/packages.config
+++ b/AweSimConnect/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net20" />
+  <package id="Tamir.SharpSSH" version="1.1.1.13" targetFramework="net20" />
 </packages>
