Add some nonessential todos

--- a/AweSimConnect/AweSimConnect.csproj
+++ b/AweSimConnect/AweSimConnect.csproj
@@ -60,7 +60,7 @@
     <Compile Include="Controllers\ClusterController.cs" />
     <Compile Include="Controllers\FileController.cs" />
     <Compile Include="Controllers\PuTTYController.cs" />
-    <Compile Include="Controllers\VncController.cs" />
+    <Compile Include="Controllers\VNCController.cs" />
     <Compile Include="Models\Cluster.cs" />
     <Compile Include="Models\Connection.cs" />
     <Compile Include="Program.cs" />
