--- a/AweSimConnect/AweSimConnect.csproj
+++ b/AweSimConnect/AweSimConnect.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\NetworkTools.cs" />
+    <Compile Include="Models\Port.cs" />
     <Compile Include="Views\AweSimMain.cs">
       <SubType>Form</SubType>
     </Compile>
