--- a/AweSimConnect/packages.config
+++ b/AweSimConnect/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="1.3.3.0" targetFramework="net20" developmentDependency="true" />
+  <package id="Fody" version="1.26.1" targetFramework="net20" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net20" />
-  <package id="Tamir.SharpSSH" version="1.1.1.13" targetFramework="net20" />
 </packages>
