Add connection status views.

--- a/AweSimConnect/AweSimConnect.csproj
+++ b/AweSimConnect/AweSimConnect.csproj
@@ -104,6 +104,7 @@
     <None Include="Resources\monitor.png" />
     <None Include="Resources\hard-disk.png" />
     <None Include="Resources\info.png" />
+    <None Include="Resources\plug.png" />
     <Content Include="Resources\redlight.png" />
     <None Include="Resources\header.png" />
     <EmbeddedResource Include="Resources\plink.exe" />
