--- a/AweSimConnect/AweSimConnect.csproj
+++ b/AweSimConnect/AweSimConnect.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\NetworkTools.cs" />
+    <Compile Include="Controllers\SFTPController.cs" />
     <Compile Include="Views\AweSimMain.cs">
       <SubType>Form</SubType>
     </Compile>
