--- a/AweSimConnect/App.config
+++ b/AweSimConnect/App.config
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="AweSimConnect.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         
     <supportedRuntime version="v2.0.50727"/></startup>
+    <userSettings>
+        <AweSimConnect.Properties.Settings>
+            <setting name="UserName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="UserPass" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="IsPassSaved" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </AweSimConnect.Properties.Settings>
+    </userSettings>
 </configuration>
