--- a/AweSimConnect/App.config
+++ b/AweSimConnect/App.config
@@ -10,10 +10,10 @@
     <supportedRuntime version="v2.0.50727"/></startup>
     <userSettings>
         <AweSimConnect.Properties.Settings>
-            <setting name="UserName" serializeAs="String">
+            <setting name="Username" serializeAs="String">
                 <value />
             </setting>
-            <setting name="UserPass" serializeAs="String">
+            <setting name="Userpass" serializeAs="String">
                 <value />
             </setting>
             <setting name="IsPassSaved" serializeAs="String">
