--- a/AweSimConnect/AweSimConnect.csproj
+++ b/AweSimConnect/AweSimConnect.csproj
@@ -170,6 +170,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\awesim-ball.ico" />
+    <None Include="Resources\stop.png" />
+    <None Include="Resources\snow.png" />
+    <None Include="Resources\wireframe-globe.png" />
     <None Include="Resources\shield.png" />
     <None Include="Resources\setting.png" />
     <None Include="assets\AweSim2Mockup.png" />
@@ -183,6 +186,8 @@
     <None Include="Resources\bolt-gry.png" />
     <None Include="Resources\check-gry.png" />
     <None Include="Resources\cross-gry.png" />
+    <None Include="Resources\browser-sizes.png" />
+    <None Include="Resources\eye-gray.png" />
     <Content Include="Resources\greenlight.png" />
     <None Include="Resources\network-socket.png" />
     <None Include="Resources\monitor.png" />
