Resolved vis node issue. Resolved vnc issue on other displays.

--- a/AweSimConnect/AweSimConnect.csproj
+++ b/AweSimConnect/AweSimConnect.csproj
@@ -86,9 +86,7 @@
     <Compile Include="Controllers\WebTools.cs" />
     <Compile Include="Models\PasswordEncryption.cs" />
     <Compile Include="Models\ProcessData.cs" />
-    <Compile Include="Models\TransparentTextBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Models\VisualizationNode.cs" />
     <Compile Include="Views\AboutFrm.cs">
       <SubType>Form</SubType>
     </Compile>
