Renamings and refactorings in advance of sshhost selection.

--- a/AweSimConnect/AweSimConnect.csproj
+++ b/AweSimConnect/AweSimConnect.csproj
@@ -106,11 +106,11 @@
       <DependentUpon>AweSimMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Controllers\ClipboardController.cs" />
-    <Compile Include="Controllers\ClusterController.cs" />
+    <Compile Include="Controllers\OSCClusterController.cs" />
     <Compile Include="Controllers\FileController.cs" />
     <Compile Include="Controllers\PuTTYController.cs" />
     <Compile Include="Controllers\VNCControllerGGI.cs" />
-    <Compile Include="Models\Cluster.cs" />
+    <Compile Include="Models\OSCCluster.cs" />
     <Compile Include="Models\Connection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
