--- a/AweSimConnect/App.config
+++ b/AweSimConnect/App.config
@@ -19,6 +19,9 @@
             <setting name="IsPassSaved" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="SSHHost" serializeAs="String">
+                <value>OAK</value>
+            </setting>
         </AweSimConnect.Properties.Settings>
     </userSettings>
 </configuration>
