--- a/AweSimConnect/Properties/Settings.settings
+++ b/AweSimConnect/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="IsPassSaved" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="SSHHost" Type="System.String" Scope="User">
+      <Value Profile="(Default)">OAK</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
