Add new settings

--- a/AweSimConnect/App.config
+++ b/AweSimConnect/App.config
@@ -22,6 +22,12 @@
             <setting name="SSHHost" serializeAs="String">
                 <value>OAK</value>
             </setting>
+            <setting name="AutoOpenApp" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DetectClipboard" serializeAs="String">
+                <value>False</value>
+            </setting>
         </AweSimConnect.Properties.Settings>
     </userSettings>
 </configuration>
