--- a/AweSimConnect/Properties/Settings.settings
+++ b/AweSimConnect/Properties/Settings.settings
@@ -14,5 +14,11 @@
     <Setting Name="SSHHost" Type="System.String" Scope="User">
       <Value Profile="(Default)">OAK</Value>
     </Setting>
+    <Setting Name="AutoOpenApp" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="DetectClipboard" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
