Fix bug where advanced settings not showwing current state. Rename FileZilla Controller, Add WinSCP Controller (unimplemented)

--- a/AweSimConnect/AweSimConnect.csproj
+++ b/AweSimConnect/AweSimConnect.csproj
@@ -82,7 +82,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\NetworkTools.cs" />
-    <Compile Include="Controllers\SFTPController.cs" />
+    <Compile Include="Controllers\SFTPControllerFileZilla.cs" />
+    <Compile Include="Controllers\SFTPControllerWinSCP.cs" />
     <Compile Include="Controllers\VNCControllerTurbo.cs" />
     <Compile Include="Controllers\WebTools.cs" />
     <Compile Include="Models\AdvancedSettings.cs" />
