--- a/AweSimConnect/App.config
+++ b/AweSimConnect/App.config
@@ -26,7 +26,7 @@
                 <value>False</value>
             </setting>
             <setting name="DetectClipboard" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
         </AweSimConnect.Properties.Settings>
     </userSettings>
