Update license and version, add FileZilla override to advanced settings.

--- a/AweSimConnect/App.config
+++ b/AweSimConnect/App.config
@@ -28,6 +28,9 @@
             <setting name="DetectClipboard" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="UseDefaultSFTP" serializeAs="String">
+                <value>False</value>
+            </setting>
         </AweSimConnect.Properties.Settings>
     </userSettings>
 </configuration>
