--- a/AweSimConnect/Properties/Settings.settings
+++ b/AweSimConnect/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="DetectClipboard" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="UseDefaultSFTP" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
