--- a/AweSimConnect/packages.config
+++ b/AweSimConnect/packages.config
@@ -3,4 +3,5 @@
   <package id="Costura.Fody" version="1.3.3.0" targetFramework="net20" developmentDependency="true" />
   <package id="Fody" version="1.26.1" targetFramework="net20" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net20" />
+  <package id="NUnit" version="2.6.4" targetFramework="net20" />
 </packages>
