Rename Putty controller to plinkcontroller

--- a/AweSimConnect/AweSimConnect.csproj
+++ b/AweSimConnect/AweSimConnect.csproj
@@ -116,7 +116,7 @@
     <Compile Include="Controllers\ClipboardController.cs" />
     <Compile Include="Controllers\OSCClusterController.cs" />
     <Compile Include="Controllers\FileController.cs" />
-    <Compile Include="Controllers\PuTTYController.cs" />
+    <Compile Include="Controllers\PlinkController.cs" />
     <Compile Include="Controllers\VNCControllerGGI.cs" />
     <Compile Include="Models\OSCCluster.cs" />
     <Compile Include="Models\Connection.cs" />
