--- a/AweSimConnect/packages.config
+++ b/AweSimConnect/packages.config
@@ -4,4 +4,5 @@
   <package id="Fody" version="1.26.1" targetFramework="net20" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net20" />
   <package id="NUnit" version="2.6.4" targetFramework="net20" />
+  <package id="Tamir.SharpSSH" version="1.1.1.13" targetFramework="net20" />
 </packages>
