--- a/AweSimConnect/AweSimConnect.csproj
+++ b/AweSimConnect/AweSimConnect.csproj
@@ -98,6 +98,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\CommandLineController.cs" />
     <Compile Include="Controllers\ConsoleController.cs" />
     <Compile Include="Controllers\NetworkTools.cs" />
     <Compile Include="Controllers\SFTPControllerFileZilla.cs" />
