Add new settings for command line data storage.

--- a/AweSimConnect/App.config
+++ b/AweSimConnect/App.config
@@ -31,6 +31,9 @@
             <setting name="UseDefaultSFTP" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="CommandLineUpdated" serializeAs="String">
+                <value>False</value>
+            </setting>
         </AweSimConnect.Properties.Settings>
     </userSettings>
 </configuration>
