--- a/AweSimConnect/Properties/Settings.settings
+++ b/AweSimConnect/Properties/Settings.settings
@@ -23,5 +23,11 @@
     <Setting Name="UseDefaultSFTP" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="CommandLineArgsArray" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="CommandLineUpdated" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
