--- a/AweSimConnect/App.config
+++ b/AweSimConnect/App.config
@@ -34,6 +34,9 @@
             <setting name="CommandLineUpdated" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="LaunchSSHOnImport" serializeAs="String">
+                <value>False</value>
+            </setting>
         </AweSimConnect.Properties.Settings>
     </userSettings>
 </configuration>
