Fix bug in multiple tunnels to the same endpoint because connection object wasn't getting deep copied.

--- a/AweSimConnect/AweSimConnect.csproj
+++ b/AweSimConnect/AweSimConnect.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Controllers\VNCControllerTurbo.cs" />
     <Compile Include="Controllers\WebTools.cs" />
     <Compile Include="Models\AdvancedSettings.cs" />
+    <Compile Include="Models\ObjectCopier.cs" />
     <Compile Include="Models\PasswordEncryption.cs" />
     <Compile Include="Models\ProcessData.cs" />
     <Compile Include="Models\VisualizationNode.cs" />
