Refactor system calls to user32.dll into their own static method class and add link to an API reference since links to MSDN API are broken.

--- a/AweSimConnect/AweSimConnect.csproj
+++ b/AweSimConnect/AweSimConnect.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Controllers\SFTPControllerFileZilla.cs" />
     <Compile Include="Controllers\SFTPControllerWinSCP.cs" />
     <Compile Include="Controllers\SSHController.cs" />
+    <Compile Include="Controllers\User32.cs" />
     <Compile Include="Controllers\VNCControllerTurbo.cs" />
     <Compile Include="Controllers\WebTools.cs" />
     <Compile Include="Models\AdvancedSettings.cs" />
