Enable 1-click settings by default.

--- a/AweSimConnect/App.config
+++ b/AweSimConnect/App.config
@@ -23,7 +23,7 @@
                 <value>OAK</value>
             </setting>
             <setting name="AutoOpenApp" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="DetectClipboard" serializeAs="String">
                 <value>True</value>
@@ -32,7 +32,7 @@
                 <value>False</value>
             </setting>
             <setting name="LaunchSSHOnImport" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
         </AweSimConnect.Properties.Settings>
     </userSettings>
