--- a/AweSimConnect/AweSimConnect.csproj
+++ b/AweSimConnect/AweSimConnect.csproj
@@ -144,7 +144,7 @@
     <Compile Include="Controllers\ClipboardController.cs" />
     <Compile Include="Controllers\OSCClusterController.cs" />
     <Compile Include="Controllers\FileController.cs" />
-    <Compile Include="Controllers\PlinkController.cs" />
+    <Compile Include="Controllers\TunnelController.cs" />
     <Compile Include="Models\OSCCluster.cs" />
     <Compile Include="Models\Connection.cs" />
     <Compile Include="Program.cs" />
