--- a/AweSimConnect/App.config
+++ b/AweSimConnect/App.config
@@ -34,6 +34,12 @@
             <setting name="LaunchSSHOnImport" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="NewerVersionAvailable" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AutoCheckNewVersion" serializeAs="String">
+                <value>True</value>
+            </setting>
         </AweSimConnect.Properties.Settings>
     </userSettings>
 </configuration>
