--- a/AweSimConnect/Properties/Settings.settings
+++ b/AweSimConnect/Properties/Settings.settings
@@ -29,5 +29,11 @@
     <Setting Name="LaunchSSHOnImport" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="NewerVersionAvailable" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="AutoCheckNewVersion" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
