--- a/AweSimConnect/AweSimConnect.csproj
+++ b/AweSimConnect/AweSimConnect.csproj
@@ -213,7 +213,7 @@
     <None Include="Resources\WinSCP.exe" />
     <None Include="Resources\awesim_logo.png" />
     <Content Include="Resources\awesim_logo2.png" />
-    <Content Include="Resources\putty.exe" />
+    <None Include="Resources\putty.exe" />
     <None Include="Resources\console.png" />
     <None Include="Resources\officine2.png" />
     <None Include="Resources\wifi.png" />
