Update helper app handling to use temp folder if AweSimConnect is launched from non-writeable location

--- a/AweSimConnect/App.config
+++ b/AweSimConnect/App.config
@@ -40,6 +40,9 @@
             <setting name="AutoCheckNewVersion" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="WriteableUser" serializeAs="String">
+                <value>False</value>
+            </setting>
         </AweSimConnect.Properties.Settings>
     </userSettings>
 </configuration>
