Add slider to adjust default quality value of VNC session.

--- a/AweSimConnect/App.config
+++ b/AweSimConnect/App.config
@@ -43,6 +43,9 @@
             <setting name="WriteableUser" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="VNCQuality" serializeAs="String">
+                <value>95</value>
+            </setting>
         </AweSimConnect.Properties.Settings>
     </userSettings>
 </configuration>
