--- a/AweSimConnect/AweSimConnect.csproj
+++ b/AweSimConnect/AweSimConnect.csproj
@@ -210,6 +210,8 @@
     <Content Include="libs\DiffieHellman.dll" />
     <Content Include="libs\Org.Mentalis.Security.dll" />
     <Content Include="libs\Tamir.SharpSSH.dll" />
+    <None Include="Resources\osclogo2.jpg" />
+    <None Include="Resources\osclogo.png" />
     <None Include="Resources\OSC-logo-txt.png" />
     <None Include="Resources\OSC_Logo_Icon-Only.jpg" />
     <None Include="Resources\WinSCP.exe" />
