--- a/AweSimConnect/AweSimConnect.csproj
+++ b/AweSimConnect/AweSimConnect.csproj
@@ -152,11 +152,11 @@
     <Compile Include="Models\Connection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\AweSimMain2.cs">
+    <Compile Include="Views\ConnectMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\AweSimMain2.Designer.cs">
-      <DependentUpon>AweSimMain2.cs</DependentUpon>
+    <Compile Include="Views\ConnectMainForm.Designer.cs">
+      <DependentUpon>ConnectMainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\ConnectionPanel.cs">
       <SubType>UserControl</SubType>
@@ -182,8 +182,8 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\AweSimMain2.resx">
-      <DependentUpon>AweSimMain2.cs</DependentUpon>
+    <EmbeddedResource Include="Views\ConnectMainForm.resx">
+      <DependentUpon>ConnectMainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\ConnectionPanel.resx">
       <DependentUpon>ConnectionPanel.cs</DependentUpon>
